--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_ENV=local
 APP_KEY=base64:8QRpqcFqMlSOaGKVc0+WMdAbgYQf+RnirkGOdJau1A4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://asclepiusmed.herokuapp.com/
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=asclepius
-DB_USERNAME=root
-DB_PASSWORD=null
+DB_DATABASE=gsNynFUwjq
+DB_USERNAME=gsNynFUwjq
+DB_PASSWORD=sa1td2A9uA
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
