--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=https://asclepiusmed.herokuapp.com/
 DB_CONNECTION=mysql
 DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=gsNynFUwjq
-DB_USERNAME=gsNynFUwjq
-DB_PASSWORD=sa1td2A9uA
+DB_DATABASE=EuPmoTQjS4
+DB_USERNAME=EuPmoTQjS4
+DB_PASSWORD=vH9bgc2goP
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
